# h1v2-Isaac

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: debug_real.py  log.py  main.py  plot_metrics.py  sim2real.py  sim2sim.py
deploy/config/: agent_model.onnx  agent_model_noHistory.onnx  config.yaml  env.yaml  env_golden.yaml  env_minimal.yaml  env_rand.yaml  env_unitree.yaml  policy_golden.onnx
deploy/controllers/: rl.py
deploy/eval/: eval_policy.py  safety_checker.py
deploy/mujoco/: deploy_mujoco.py
deploy/mujoco/config/: h1_2.yaml
deploy/robots/: h12_mujoco.py  h12_real.py  unitree_sdk2py_bridge.py
deploy/simulator/: sim_mujoco.py
deploy/utils/: checker.py  config_parser.py  logger.py  mj_logger.py  visualizer.py
docker/: Dockerfile
scripts/: list_envs.py
scripts/clean_rl/: cli_args.py  play.py  train.py
scripts/deploy/: config.yaml  log.py  main.py  plot.py  record_limits.py  replay.py  sim2real.py  sim2sim.py
scripts/deploy/policies/demo_rsl/: policy.onnx
scripts/deploy/policies/success_1/: policy.onnx
scripts/deploy/policies/success_2/: policy.onnx
scripts/rsl_rl/: play.py  train.py
source/biped_assets/biped_assets/: __init__.py  assets.py
source/biped_assets/biped_assets/robots/: h12.py
source/biped_tasks/biped_tasks/utils/cat/: cat_env.py  constraint_manager.py  constraints.py
source/biped_tasks/biped_tasks/utils/cleanrl/: ppo.py
source/biped_tasks/biped_tasks/utils/history/: observation_manager.py
source/biped_tasks/biped_tasks/utils/mdp/: commands.py
source/h1_assets/: setup.py
source/h1_assets/config/: extension.toml
source/h1_assets/h1_assets/robots/: h12.py  h1v2.py
source/h1_extension/: setup.py
source/h1_extension/config/: extension.toml
source/h1_extension/h1_extension/: ui_extension_example.py
source/h1_extension/h1_extension/utils/cat/: cat_env.py  constraints.py  curriculums.py
source/h1_extension/h1_extension/utils/cleanrl/: ppo.py
source/h1_extension/h1_extension/utils/history/: observation_manager.py
urdfs/: h1_2_12dof.xml  scene.xml
urdfs/12dofs/: .asset_hash  config.yaml  h12_12dof.usd
urdfs/12dofs/configuration/: h12_12dof_physics.usd  h1_2_12dof_base.usd
(+21 files in other folders)
