[project]
authors = [{email = "cperrot@laas.fr", name = "Côme Perrot"}]
dependencies = ["robot-deploy", "robot-tasks"]
description = "Reinforcement Learning pipeline for the h1v2"
name = "h1v2-isaac"
readme = "README.md"
requires-python = "==3.10.*"
version = "0.1.0"

[tool.pyright]
enableTypeIgnoreComments = true
exclude = ["**/__pycache__", "**/logs", ".git", ".vscode"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportGeneralTypeIssues = "none"
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "warning"
reportPrivateUsage = "warning"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "A",
  "B",
  "C",
  "COM",
  "DJ",
  "EM",
  "EXE",
  "G",
  # "PTH",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
  "YTT"
]
# E402: Module level import not at top of file
# RET504: Unnecessary variable assignment before return statement.
# SIM102: Use a single if-statement instead of nested if-statements
ignore = ["COM812", "D203", "D213", "E402", "RET504", "SIM102"]

[tool.ruff.lint.isort]
extra-standard-library = [
  "bpy",
  "gym",
  "gymnasium",
  "h5py",
  "hid",
  "matplotlib",
  "numpy",
  "open3d",
  "prettytable",
  "psutil",
  "scipy",
  "tensordict",
  "toml",
  "torch",
  "tqdm",
  "trimesh",
  "yaml"
]
known-first-party = [
  "robot_assets",
  "robot_deploy",
  "robot_tasks"
]
known-third-party = [
  "Semantics",
  "carb",
  "isaacsim.core.api",
  "omni.kit.*",
  "omni.replicator.core",
  "pxr",
  "warp"
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "isaaclab",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
isaaclab = [
  "isaaclab",
  "isaaclab_assets",
  "isaaclab_mimic",
  "isaaclab_rl",
  "isaaclab_tasks"
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.tomlsort]
all = true
overrides."tool.ruff.lint.isort.section-order".inline_arrays = false

[tool.uv.sources]
robot-deploy = {workspace = true}
robot-tasks = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/robot_assets",
  "packages/robot_deploy",
  "packages/robot_tasks"
]
